--- a/TODOs/todo.txt
+++ b/TODOs/todo.txt
@@ -7,7 +7,7 @@ Bugs:
 	Logic:
 		When object are put on the right side of the current square, they disappear
 		Drawing door ornaments segfaults when going back to the start
-		Stepping onto the plate next doesn't open the grated gate on the 0th level
+		Placing one of the play icons from the top right corner into one of the champions' hands will crash the engine
 
 Possible bugs:
 	- k1_LeftMouseButton and k2_RightMouseButton have values 1 and 2 respectively, contrary to the original in the original: MASK0x0001_MOUSE_RIGHT_BUTTON, MASK0x0002_MOUSE_LEFT_BUTTON
