DM: Add entrance processing

--- a/TODOs/todo.txt
+++ b/TODOs/todo.txt
@@ -31,4 +31,5 @@ Todo:
 Finish stuff:
 	f380_processCommandQueue
 	Missing main loop methods
+	Save file f433_processCommand140_saveGame fails silently
 
