DM: Add f352_processCommand71_clickOnEye, setting _g597_ignoreMouseMovements now prevents mouse movement

--- a/TODOs/todo.txt
+++ b/TODOs/todo.txt
@@ -35,3 +35,5 @@ Finish stuff:
 	Missing main loop methods
 	Save file f433_processCommand140_saveGame fails silently
 
+Refactoring
+	Places implementing mini mainloop and where input doesn't really matter should call discardInput instead of processInput
