DM: Fix double load when loading from launcher

--- a/TODOs/todo.txt
+++ b/TODOs/todo.txt
@@ -17,4 +17,5 @@ Code stuff todo:
 	Complete stub methods(blitShrink, blitmask, scroller, etc.)
 	Save file f433_processCommand140_saveGame fails silently, add error checking
 	
-	
+	Add loading from dungeon
+	Fix incorrect thumbnail	
